--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on:
     branches:
       - main
 
-name: 🚀 Deploy website on push
+name: 🚀 Deploy Backend on Push
 
 jobs:
   backend-deploy:
@@ -15,13 +15,20 @@ jobs:
       - name: 🚚 Get latest code
         uses: actions/checkout@v4
 
-      - name: 📂 Sync files
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-        with:
-          server: ${{ secrets.FTP_SERVER }}
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          protocol: ftps
-          port: ${{ secrets.FTP_PORT }}
-          local-dir: ./
-          server-dir: /cpanel-cicd-nodejs/
+      - name: 📂 Upload project via SCP
+        run: |
+          echo "$SSH_PRIVATE_KEY" > private_key.pem
+          chmod 600 private_key.pem
+          scp -r -i private_key.pem ./ sunshineiot@sunshineiot.in:/home/sunshineiot/cpanel-cicd-nodejs/
+
+      - name: 🔁 Restart server (PM2 or Node)
+        run: |
+          ssh -i private_key.pem sunshineiot@sunshineiot.in << 'EOF'
+            cd /home/sunshineiot/cpanel-cicd-nodejs
+            npm install --omit=dev
+            pm2 restart index || node index.js &
+          EOF
+
+    env:
+      SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+
