--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: 📂 Upload project via SCP
         run: |
-          echo "$SSH_PRIVATE_KEY" > private_key.pem
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > private_key.pem
           chmod 600 private_key.pem
           scp -r -i private_key.pem ./ sunshineiot@sunshineiot.in:/home/sunshineiot/cpanel-cicd-nodejs/
 
@@ -33,7 +33,4 @@ jobs:
             npm install --omit=dev
             pm2 restart index || node index.js &
           EOF
-
-    env:
-      SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
